bugfix: fix alignment of color pickers and opacity slider

--- a/css/config.css
+++ b/css/config.css
@@ -123,7 +123,7 @@ label {
 .checkelements {
   width: 100%;
   display: inline-flex;
-  padding: 5px 0 0 0;
+  padding: 3px 0 0 0;
 }
 
 .elementcontainer {
@@ -135,24 +135,26 @@ label {
 
 #glowcolor {
   position: relative;
-  left: 12px;
-  margin-right: 30px;
 }
 
 #bordercolor {
   position: relative;
-  left: 2px;
 }
 
 #opacitySlider {
   position: relative;
-  left: 28px;
 }
 
 .xuicontainer {
   width: 100%;
   margin-bottom: 5px;
 }
+
+.xuicontainer label {
+  width: 72px;
+  display: inline-block;
+}
+
 
 #innersection {
   border: 1px solid #000;
@@ -165,4 +167,9 @@ xui-section {
   margin: 0;
   margin-left: auto;
   margin-right: auto;
+}
+
+xui-colorpicker /deep/ #colorPicker div#paletteContainer
+{
+  margin-top: -90px;
 }
